调整参数 观察 gc